# src/route/arduinos.route.js
@@ -1,19 +1,0 @@
-const express = require("express");
-const {
-  getArduinos,
-  getArduinoDetail,
-  addArduino,
-  updateArduino,
-  deleteArduino,
-} = require("../controllers/arduinos.controller");
-
-const router = express.Router();
-
-router
-  .get("/arduinos", getArduinos)
-  .get("/arduinos/:id", getArduinoDetail)
-  .post("/arduinos", addArduino)
-  .put("/arduinos/:id", updateArduino)
-  .delete("/arduinos/:id", deleteArduino);
-
-module.exports = router;
