# src/route/users.route.js
@@ -1,19 +1,22 @@
 const express = require("express");
 const {
-  getUsers,
+  getAllUsers,
   getUserDetail,
   addUser,
   updateUser,
   deleteUser,
+  bindingHome,
 } = require("../controllers/users.controller");
 
 const router = express.Router();
 
 router
-  .get("/users", getUsers)
+  .get("/users", getAllUsers)
   .get("/users/:id", getUserDetail)
   .post("/users", addUser)
-  .put("/users/:id", updateUser)
-  .delete("/users/:id", deleteUser);
+  .put("/users", updateUser)
+  .delete("/users/:id", deleteUser)
+  .put("/binding/:id",  bindingHome)
+
 
 module.exports = router;
